fix: Dashboard appts list spacing

--- a/src/containers/Dashboard.scss
+++ b/src/containers/Dashboard.scss
@@ -39,6 +39,11 @@ $mobile-breakpoint: 900px;
   grid-column-gap: 2rem;
   grid-row-gap: 2rem;
   grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: min-content;
+
+  & > div:last-child {
+    margin-bottom: 2rem;
+  }
 
   @media (min-width: 1200px) {
     grid-template-columns: repeat(2, 1fr);
